--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,8 @@
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="120" height="75">
-          <span class="fs-4">The Jerk Co</span>
+          <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="120" height="75" class="me-3">
+          <span class="fs-4 ms-2">The Jerk Co</span>
         </a>
         <ul class="nav nav-pills align-items-center">
           <li class="nav-item"><a href="Index.html" class="nav-link text-primary-emphasis">Home</a></li>
@@ -29,17 +29,17 @@
 
   <section class="content-section">
     <div class="container">
-      <h2 class="fw-bold text-center mb-5">Our Blog</h2>
+      <h2 class="fw-bold text-center mb-5">Jerk Blog</h2>
       
       <!-- New Blog Post -->
-      <div class="row mb-4">
-        <div class="col-md-12">
+      <div class="card shadow-sm mb-5 bg-white rounded">
+        <div class="card-body p-4">
           <h3>Kickstart the Year: Healthy Caribbean-Inspired Meals</h3>
           <p>With the vibrant summer sun shining down on South Africa, there’s no better time to embrace lighter, refreshing dishes that still pack a punch of flavor. Whether you’re looking to fulfill your New Year’s resolutions or just jazz up your weekly dinners, these healthy Caribbean-inspired meal ideas offer a taste of the islands—right here in Mzansi!</p>
           <h4>A Personal Note from The Jerk Co.</h4>
           <p>“I remember how I used to cook Jerk chicken on a Sunday as prep for the week. Working long hours left little time to cook in the evenings, so it became necessary to have meals ready to go. My colleagues would catch a whiff of those Caribbean spices when I reheated my lunch, and they’d immediately come over—some to (jokingly) complain about the mouthwatering aroma, others to beg for a sample! That was the spark that inspired The Jerk Company.”</p>
           <p>At The Jerk Co., our marinades and spice blends are made without harmful additives—just real ingredients for real flavor. If you’re curious about our all-natural jerk marinade, feel free to check it out here.</p>
-          <h4>1. Embrace Fresh & Light Caribbean Flavors</h4>
+          <h4>Embrace Fresh & Light Caribbean Flavors</h4>
           <p><strong>Why Light & Fresh?</strong><br>
           Summer in South Africa calls for fresh, light dishes—here’s how Caribbean flair can elevate your healthy-eating goals.</p>
           <p><strong>Caribbean Cuisine 101</strong><br>
@@ -56,54 +56,59 @@
           <p><em>Sourcing Spices</em><br>
           Spices can be tricky to find. Fordsburg’s Indian spice shops are a great go-to, thanks to a shared love of bold flavors.<br>
           Look out for fresh pimento, cumin, or scotch bonnet peppers to nail the real jerk taste.</p>
-          <h4>2. Portion Control & Meal Prep Tips</h4>
-          <p>“Ever feel like you overdo it when cooking something this delicious? You’re not alone!”</p>
-          <p><strong>Pre-Plan Portions</strong><br>
-          Marinate exactly how much protein or veg you’ll need for each meal.<br>
-          One bottle of The Jerk Co. marinade can easily see you through multiple weekday lunches and dinners.</p>
-          <p><strong>Bulk Meal Prep</strong><br>
-          Make a larger batch of jerk seasoning on a Sunday.<br>
-          Store it in airtight containers and use it throughout the week.<br>
-          Check out our Meal Prep Guide (coming soon) for more tips!</p>
-          <p><strong>Balanced Accompaniments</strong><br>
-          Pair jerk-spiced meats or tofu with roasted veggies or tropical fruit salads to keep meals light yet satisfying.<br>
-          Our marinade’s versatility means you won’t get bored, even if you eat jerk all week long!</p>
-          <h4>3. Simple Recipe Spotlight: Jerk-Seasoned Chicken & Pineapple Salad</h4>
-          <p><strong>Serves 2–3</strong></p>
-          <p><strong>Ingredients:</strong><br>
-          2 chicken breasts (skinless, boneless)<br>
-          2 Tbsp The Jerk Co. Lighter Marinade (link)<br>
-          1 cup chopped fresh pineapple<br>
-          Mixed salad greens (lettuce, rocket, spinach)<br>
-          ½ sliced red onion<br>
-          Juice of 1 lime<br>
-          Salt & pepper to taste</p>
-          <p><strong>Method:</strong><br>
-          Marinate the chicken in The Jerk Co. Lighter Marinade for at least 30 minutes (longer for deeper flavor).<br>
-          Grill or bake until cooked through.<br>
-          Assemble your greens, pineapple, and onion in a bowl.<br>
-          Slice the chicken and place on top.<br>
-          Drizzle with lime juice, add salt & pepper, and enjoy!</p>
-          <p>“I sometimes top the salad with our Mango Salsa for extra tang—it’s a surefire way to impress the office crowd if you bring it for lunch!”</p>
-          <h4>4. Tying It Back to New Year’s Resolutions</h4>
+          
+          <div class="row mb-4">
+            <div class="col-md-6">
+              <h4>Portion Control & Meal Prep Tips</h4>
+              <p>"Ever feel like you overdo it when cooking something this delicious? You're not alone!"</p>
+              <p><strong>Pre-Plan Portions</strong><br>
+              Marinate exactly how much protein or veg you'll need for each meal.<br>
+              One bottle of The Jerk Co. marinade can easily see you through multiple weekday lunches and dinners.</p>
+              <p><strong>Bulk Meal Prep</strong><br>
+              Make a larger batch of jerk seasoning on a Sunday.<br>
+              Store it in airtight containers and use it throughout the week.<br>
+              Check out our Meal Prep Guide (coming soon) for more tips!</p>
+              <p><strong>Balanced Accompaniments</strong><br>
+              Pair jerk-spiced meats or tofu with roasted veggies or tropical fruit salads to keep meals light yet satisfying.<br>
+              Our marinade's versatility means you won't get bored, even if you eat jerk all week long!</p>
+            </div>
+            <div class="col-md-6">
+              <img src="./Assets/Images/3 Overhead shot of meal prep.jpg" alt="Meal Prep with Jerk Chicken" class="img-fluid rounded shadow">
+            </div>
+          </div>
+          <h4>Simple Recipe Spotlight: Jerk-Seasoned Chicken & Pineapple Salad</h4>
+          <div class="row">
+            <div class="col-md-6">
+              <p><strong>Serves 2–3</strong></p>
+              <p><strong>Ingredients:</strong><br>
+              2 chicken breasts (skinless, boneless)<br>
+              2 Tbsp The Jerk Co. Lighter Marinade (link)<br>
+              1 cup chopped fresh pineapple<br>
+              Mixed salad greens (lettuce, rocket, spinach)<br>
+              ½ sliced red onion<br>
+              Juice of 1 lime<br>
+              Salt & pepper to taste</p>
+              <p><strong>Method:</strong><br>
+              Marinate the chicken in The Jerk Co. Lighter Marinade for at least 30 minutes (longer for deeper flavor).<br>
+              Grill or bake until cooked through.<br>
+              Assemble your greens, pineapple, and onion in a bowl.<br>
+              Slice the chicken and place on top.<br>
+              Drizzle with lime juice, add salt & pepper, and enjoy!</p>
+              <p>"I sometimes top the salad with our Mango Salsa for extra tang—it's a surefire way to impress the office crowd if you bring it for lunch!"</p>
+            </div>
+            <div class="col-md-6">
+              <img src="./Assets/Images/Pineapple Jerk Salad.jpg" alt="Jerk-Seasoned Chicken & Pineapple Salad" class="img-fluid rounded shadow">
+            </div>
+          </div>
+          <h4>Tying It Back to New Year’s Resolutions</h4>
           <p>Whether your goal is to eat more whole foods, stick to your fitness routine, or simply explore new culinary horizons, adding Caribbean flavors to your menu can be a game-changer. With fresh produce, lean proteins, and bold spices, your meals will stay interesting without sacrificing nutrition.</p>
           <p>“Remember, all our marinades at The Jerk Co. are free from artificial additives, so every bite comes from real ingredients you can trust.”</p>
           <h4>Conclusion & Call to Action</h4>
           <p>Healthy can be delicious when you add a touch of island flavor to your plate. We’d love for you to share your Caribbean-inspired dishes or ask questions in the comments below. Don’t forget to follow The Jerk Co. on social media or sign up for our newsletter for more recipes and behind-the-scenes stories.</p>
-          <p>“Want to taste our authentic jerk flavors firsthand? Sign up here to be notified about our upcoming pop-ups and exclusive product launches.”</p>
+          <p>“Want to taste our signature jerk flavors firsthand? Sign up here to be notified about our upcoming pop-ups and exclusive product launches.”</p>
           <p>Stay tuned for our next post where we’ll reveal the perfect reggae playlist to keep you grooving in the kitchen!</p>
-          <h4>Suggested Images & AI Prompts</h4>
-          <p><strong>Vibrant Salad & Jerk Chicken</strong><br>
-          Prompt (Runway/Ideogram):<br>
-          “A bright, tropical salad topped with jerk-marinated chicken slices using a light marinade, garnished with fresh pineapple chunks and lime wedges, photographed in bright, natural lighting, summery, Caribbean-style.”</p>
-          <p><strong>Meal Prep Flat Lay</strong><br>
-          Prompt:<br>
-          “An overhead shot of meal prep containers with jerk chicken, colorful roasted vegetables, and fresh fruit salad on a wooden table, with a light, tropical background.”</p>
-          <p><strong>Product Shot</strong><br>
-          Prompt:<br>
-          “A clean, minimalistic product photo of a marinade bottle labeled ‘The Jerk Co.’ in a bright, tropical setting with fresh spices and herbs.”</p>
           <p>Happy Cooking and Happy New Year! We hope our tips, recipes, and stories inspire you to bring a little Caribbean sunshine into your kitchen. Don’t hesitate to reach out if you have any questions or want to share your own Island-style creations!</p>
-          <div class="mb-4">
+           <div class="mb-4">
             <h4>Comments</h4>
             <form>
               <div class="mb-3">
@@ -121,51 +126,59 @@
       </div>
 
       <!-- Blog Post 1 -->
-      <div class="row mb-4">
-        <div class="col-md-6">
-          <img src="./Assets/Images/blog-image-1.jpg" alt="Blog Image 1" class="img-fluid rounded">
-        </div>
-        <div class="col-md-6">
-          <h3>Exploring the Flavors of Jerk</h3>
-          <p>Discover the rich and diverse flavors of jerk cuisine, from its historical roots to modern interpretations. Join us as we explore the spices and techniques that make jerk a beloved culinary tradition.</p>
-          <div class="mb-4">
-            <h4>Comments</h4>
-            <form>
-              <div class="mb-3">
-                <label for="name1" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name1" placeholder="Your name">
+      <div class="card shadow-sm mb-5 bg-white rounded">
+        <div class="card-body p-4">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="./Assets/Images/blog-image-1.jpg" alt="Blog Image 1" class="img-fluid rounded mb-3">
+            </div>
+            <div class="col-md-6">
+              <h3>Exploring the Flavors of Jerk</h3>
+              <p>Discover the rich and diverse flavors of jerk cuisine, from its historical roots to modern interpretations. Join us as we explore the spices and techniques that make jerk a beloved culinary tradition.</p>
+              <div class="mb-4">
+                <h4>Comments</h4>
+                <form>
+                  <div class="mb-3">
+                    <label for="name1" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name1" placeholder="Your name">
+                  </div>
+                  <div class="mb-3">
+                    <label for="comment1" class="form-label">Comment</label>
+                    <textarea class="form-control" id="comment1" rows="3" placeholder="Your comment"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
               </div>
-              <div class="mb-3">
-                <label for="comment1" class="form-label">Comment</label>
-                <textarea class="form-control" id="comment1" rows="3" placeholder="Your comment"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- Blog Post 2 -->
-      <div class="row mb-4">
-        <div class="col-md-6 order-md-2">
-          <img src="./Assets/Images/blog-image-2.jpg" alt="Blog Image 2" class="img-fluid rounded">
-        </div>
-        <div class="col-md-6 order-md-1">
-          <h3>Jerk Festivals Around the World</h3>
-          <p>Jerk festivals are celebrated globally, bringing together food lovers to enjoy the vibrant flavors of Jamaica. Learn about the most popular festivals and how they celebrate this iconic dish.</p>
-          <div class="mb-4">
-            <h4>Comments</h4>
-            <form>
-              <div class="mb-3">
-                <label for="name2" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name2" placeholder="Your name">
+      <div class="card shadow-sm mb-5 bg-white rounded">
+        <div class="card-body p-4">
+          <div class="row">
+            <div class="col-md-6 order-md-2">
+              <img src="./Assets/Images/blog-image-2.jpg" alt="Blog Image 2" class="img-fluid rounded mb-3">
+            </div>
+            <div class="col-md-6 order-md-1">
+              <h3>Jerk Festivals Around the World</h3>
+              <p>Jerk festivals are celebrated globally, bringing together food lovers to enjoy the vibrant flavors of Jamaica. Learn about the most popular festivals and how they celebrate this iconic dish.</p>
+              <div class="mb-4">
+                <h4>Comments</h4>
+                <form>
+                  <div class="mb-3">
+                    <label for="name2" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name2" placeholder="Your name">
+                  </div>
+                  <div class="mb-3">
+                    <label for="comment2" class="form-label">Comment</label>
+                    <textarea class="form-control" id="comment2" rows="3" placeholder="Your comment"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
               </div>
-              <div class="mb-3">
-                <label for="comment2" class="form-label">Comment</label>
-                <textarea class="form-control" id="comment2" rows="3" placeholder="Your comment"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            </div>
           </div>
         </div>
       </div>
