--- a/products.html
+++ b/products.html
@@ -91,34 +91,63 @@
   <section id="products" class="products py-5">
     <div class="container">
       <h2 class="fw-bold text-center mb-5">Our Products</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="./Assets/Images/Jerk Marinade Sticker.jpg" class="card-img-top" alt="Jerk Marinade" style="height: 300px; object-fit: cover; width: 100%;">
-            <div class="card-body">
+      <div class="row justify-content-center g-4">
+        <!-- Jerk Marinade -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="./Assets/Images/Jerk Marinade Sticker.jpg" class="card-img-top" alt="Jerk Marinade" style="height: 300px; object-fit: cover;">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Jerk Marinade</h5>
-              <p class="card-text">Our signature Jerk Marinade, perfect for adding a spicy kick to your dishes.</p>
-              <a href="ecommerce-link" class="btn btn-primary">Buy Now</a>
+              <p class="card-text flex-grow-1">Our signature Jerk Marinade, perfect for adding a spicy kick to your dishes.</p>
+              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="./Assets/Images/JERK - GLAZE Angry Jerk Sticker.jpg" class="card-img-top" alt="Angry Jerk Glaze" style="height: 300px; object-fit: cover; width: 100%;">
-            <div class="card-body">
+
+        <!-- Angry Jerk Glaze -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="./Assets/Images/JERK - GLAZE Angry Jerk Sticker.jpg" class="card-img-top" alt="Angry Jerk Glaze" style="height: 300px; object-fit: cover;">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Angry Jerk Glaze</h5>
-              <p class="card-text">Spice up your life with our Angry Jerk Glaze, perfect for any occasion.</p>
-              <a href="ecommerce-link" class="btn btn-primary">Buy Now</a>
+              <p class="card-text flex-grow-1">Spice up your life with our Angry Jerk Glaze, perfect for any occasion.</p>
+              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="./Assets/Images/Spice mix Packaging.jpg" class="card-img-top" alt="Spice Mix Packaging" style="height: 300px; object-fit: cover; width: 100%;">
-            <div class="card-body">
-              <h5 class="card-title">Spice Mix</h5>
-              <p class="card-text">A blend of authentic Caribbean spices to enhance your cooking.</p>
-              <a href="ecommerce-link" class="btn btn-primary">Buy Now</a>
+
+        <!-- Spice Mix -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="./Assets/Images/Spice mix Packaging.jpg" class="card-img-top" alt="Spice Mix Packaging" style="height: 300px; object-fit: cover;">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Jerk Dry Rub</h5>
+              <p class="card-text flex-grow-1">A blend of authentic Caribbean spices to enhance your cooking.</p>
+              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Jamaican Patties -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="./Assets/Images/Jamaican patties.jpg" class="card-img-top" alt="Jamaican Patties" style="height: 300px; object-fit: cover;">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Frozen Jamaican Patties</h5>
+              <p class="card-text flex-grow-1">Our authentic Jamaican patties feature flaky, golden pastry filled with perfectly seasoned minced beef or vegetables. Ready to bake for a quick, delicious meal.</p>
+              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Pineapple & Habanero Hot Sauce -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="./Assets/Images/Image Coming Soon.png" class="card-img-top" alt="Pineapple and Habanero Hot Sauce" style="height: 300px; object-fit: cover;">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Pineapple & Habanero Hot Sauce</h5>
+              <p class="card-text flex-grow-1">A perfect blend of sweet and heat, our Pineapple & Habanero Hot Sauce brings tropical flavors with a fiery kick.</p>
+              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
             </div>
           </div>
         </div>
@@ -136,7 +165,7 @@
                 <a href="ecommerce-link-jerk-marinade" class="btn btn-primary">Buy Jerk Marinade</a>
             </div>
             <div class="col-md-6 mb-4">
-                <h3>Jerk Glaze (Mild, Medium, Angry Jerk)</h3>
+                <h3>Jerk Glaze </h3>
                 <p>Choose your heat level with our Jerk Glaze range. Whether you prefer mild, medium, or the fiery Angry Jerk, each glaze adds a sweet and spicy finish to your meals.</p>
                 <a href="ecommerce-link-jerk-glaze" class="btn btn-primary">Buy Jerk Glaze</a>
             </div>
@@ -146,7 +175,7 @@
                 <a href="ecommerce-link-green-seasoning" class="btn btn-primary">Buy Green Seasoning</a>
             </div>
             <div class="col-md-6 mb-4">
-                <h3>Jamaican Jerk Dry Rub</h3>
+                <h3>Jerk Dry Rub</h3>
                 <p>Experience the bold flavors of Jamaica with our Jerk Dry Rub. Ideal for grilling, roasting, or adding a kick to any dish.</p>
                 <a href="ecommerce-link-jerk-dry-rub" class="btn btn-primary">Buy Jerk Dry Rub</a>
             </div>
@@ -159,6 +188,16 @@
                 <h3>Caribbean Curry Powder</h3>
                 <p>Our Caribbean Curry Powder is a rich blend of spices that brings the vibrant flavors of the Caribbean to your kitchen. Perfect for curries and stews.</p>
                 <a href="ecommerce-link-caribbean-curry-powder" class="btn btn-primary">Buy Caribbean Curry Powder</a>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h3>Frozen Jamaican Patties</h3>
+                <p>Experience the convenience of our frozen Jamaican patties, perfect for a quick and satisfying meal. Each patty features our signature flaky, golden pastry filled with your choice of seasoned minced beef or vegetable filling. Made with authentic Caribbean spices and ready to bake straight from your freezer.</p>
+                <a href="ecommerce-link-jamaican-patties" class="btn btn-primary">Buy Jamaican Patties</a>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h3>Pineapple & Habanero Hot Sauce</h3>
+                <p>Experience the perfect balance of sweet tropical pineapple and the intense heat of habanero peppers. This versatile hot sauce adds a delicious Caribbean twist to any dish, from grilled meats to seafood. Made with fresh, natural ingredients and no artificial preservatives.</p>
+                <a href="ecommerce-link-hot-sauce" class="btn btn-primary">Buy Hot Sauce</a>
             </div>
         </div>
     </div>
