--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="nav-item"><a href="history-of-jerk.html" class="nav-link text-primary-emphasis">History Of Jerk</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link text-primary-emphasis">Blog</a></li>
           <li class="nav-item"><a href="#" class="nav-link text-primary-emphasis">Events</a></li>
-          <li class="nav-item"><a href="#" class="nav-link text-primary-emphasis">About Us</a></li>
+          <li class="nav-item"><a href="about-us.html" class="nav-link text-primary-emphasis">About Us</a></li>
         </ul>
       </header>
     </div>
