--- a/products.html
+++ b/products.html
@@ -70,7 +70,7 @@
           <li class="nav-item"><a href="history-of-jerk.html" class="nav-link text-primary-emphasis">History Of Jerk</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link text-primary-emphasis">Blog</a></li>
           <li class="nav-item"><a href="#" class="nav-link text-primary-emphasis">Events</a></li>
-          <li class="nav-item"><a href="#" class="nav-link text-primary-emphasis">About Us</a></li>
+          <li class="nav-item"><a href="about-us.html" class="nav-link text-primary-emphasis">About Us</a></li>
         </ul>
       </header>
     </div>
@@ -88,116 +88,108 @@
     </div>
   </section>
 
-  <section id="products" class="products py-5">
+  <section class="products-section">
     <div class="container">
-      <h2 class="fw-bold text-center mb-5">Our Products</h2>
-      <div class="row justify-content-center g-4">
-        <!-- Jerk Marinade -->
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm">
-            <img src="./Assets/Images/Jerk Marinade Sticker.jpg" class="card-img-top" alt="Jerk Marinade" style="height: 300px; object-fit: cover;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Jerk Marinade</h5>
-              <p class="card-text flex-grow-1">Our signature Jerk Marinade, perfect for adding a spicy kick to your dishes.</p>
-              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+        <h2 class="fw-bold text-center">Our Products</h2>
+        
+        <div class="row justify-content-center g-4">
+            <div class="col-md-6 col-lg-4">
+                <div class="card h-100">
+                    <img src="./Assets/Images/Jerk Marinade Sticker.jpg" class="card-img-top" alt="Jerk Marinade">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Jerk Marinade</h5>
+                        <p class="card-text flex-grow-1">Our signature Jerk Marinade, perfect for adding authentic Caribbean flavor to your dishes.</p>
+                        <a href="#" class="btn btn-primary mt-auto">Buy Now</a>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Angry Jerk Glaze -->
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm">
-            <img src="./Assets/Images/JERK - GLAZE Angry Jerk Sticker.jpg" class="card-img-top" alt="Angry Jerk Glaze" style="height: 300px; object-fit: cover;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Angry Jerk Glaze</h5>
-              <p class="card-text flex-grow-1">Spice up your life with our Angry Jerk Glaze, perfect for any occasion.</p>
-              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+            <div class="col-md-6 col-lg-4">
+                <div class="card h-100">
+                    <img src="./Assets/Images/JERK - GLAZE Angry Jerk Sticker.jpg" class="card-img-top" alt="Angry Jerk Glaze">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Angry Jerk Glaze</h5>
+                        <p class="card-text flex-grow-1">Spice up your life with our Angry Jerk Glaze, perfect for any occasion.</p>
+                        <a href="#" class="btn btn-primary mt-auto">Buy Now</a>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Spice Mix -->
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm">
-            <img src="./Assets/Images/Spice mix Packaging.jpg" class="card-img-top" alt="Spice Mix Packaging" style="height: 300px; object-fit: cover;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Jerk Dry Rub</h5>
-              <p class="card-text flex-grow-1">A blend of authentic Caribbean spices to enhance your cooking.</p>
-              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+            <div class="col-md-6 col-lg-4">
+                <div class="card h-100">
+                    <img src="./Assets/Images/Spice mix Packaging.jpg" class="card-img-top" alt="Spice Mix Packaging">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Jerk Dry Rub</h5>
+                        <p class="card-text flex-grow-1">A blend of authentic Caribbean spices to enhance your cooking.</p>
+                        <a href="#" class="btn btn-primary mt-auto">Buy Now</a>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Jamaican Patties -->
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm">
-            <img src="./Assets/Images/Jamaican patties.jpg" class="card-img-top" alt="Jamaican Patties" style="height: 300px; object-fit: cover;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Frozen Jamaican Patties</h5>
-              <p class="card-text flex-grow-1">Our authentic Jamaican patties feature flaky, golden pastry filled with perfectly seasoned minced beef or vegetables. Ready to bake for a quick, delicious meal.</p>
-              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+            <div class="col-md-6 col-lg-4">
+                <div class="card h-100">
+                    <img src="./Assets/Images/Jamaican patties.jpg" class="card-img-top" alt="Jamaican Patties">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Frozen Jamaican Patties</h5>
+                        <p class="card-text flex-grow-1">Our authentic Jamaican patties feature flaky, golden pastry filled with perfectly seasoned minced beef or vegetables. Ready to bake for a quick, delicious meal.</p>
+                        <a href="#" class="btn btn-primary mt-auto">Buy Now</a>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Pineapple & Habanero Hot Sauce -->
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm">
-            <img src="./Assets/Images/Image Coming Soon.png" class="card-img-top" alt="Pineapple and Habanero Hot Sauce" style="height: 300px; object-fit: cover;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Pineapple & Habanero Hot Sauce</h5>
-              <p class="card-text flex-grow-1">A perfect blend of sweet and heat, our Pineapple & Habanero Hot Sauce brings tropical flavors with a fiery kick.</p>
-              <a href="ecommerce-link" class="btn btn-primary mt-auto">Buy Now</a>
+            <div class="col-md-6 col-lg-4">
+                <div class="card h-100">
+                    <img src="./Assets/Images/Image Coming Soon.png" class="card-img-top" alt="Pineapple and Habanero Hot Sauce">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Pineapple & Habanero Hot Sauce</h5>
+                        <p class="card-text flex-grow-1">A perfect blend of sweet and heat, our Pineapple & Habanero Hot Sauce brings tropical flavors with a fiery kick.</p>
+                        <a href="#" class="btn btn-primary mt-auto">Buy Now</a>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
   </section>
 
-  <section id="product-details" class="product-details py-5">
+  <section class="product-details">
     <div class="container">
         <h2 class="fw-bold text-center mb-5">Explore Our Products in Detail</h2>
         <div class="row">
             <div class="col-md-6 mb-4">
                 <h3>Jerk Marinade</h3>
                 <p>Our signature Jerk Marinade is crafted to infuse your dishes with the authentic flavors of the Caribbean. Perfect for marinating meats and vegetables.</p>
-                <a href="ecommerce-link-jerk-marinade" class="btn btn-primary">Buy Jerk Marinade</a>
+                <a href="#" class="btn btn-primary">Buy Jerk Marinade</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>Jerk Glaze </h3>
                 <p>Choose your heat level with our Jerk Glaze range. Whether you prefer mild, medium, or the fiery Angry Jerk, each glaze adds a sweet and spicy finish to your meals.</p>
-                <a href="ecommerce-link-jerk-glaze" class="btn btn-primary">Buy Jerk Glaze</a>
+                <a href="#" class="btn btn-primary">Buy Jerk Glaze</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>Green Seasoning</h3>
                 <p>Our Green Seasoning is a versatile blend of herbs and spices, perfect for marinating, seasoning, or as a base for your favorite dishes.</p>
-                <a href="ecommerce-link-green-seasoning" class="btn btn-primary">Buy Green Seasoning</a>
+                <a href="#" class="btn btn-primary">Buy Green Seasoning</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>Jerk Dry Rub</h3>
                 <p>Experience the bold flavors of Jamaica with our Jerk Dry Rub. Ideal for grilling, roasting, or adding a kick to any dish.</p>
-                <a href="ecommerce-link-jerk-dry-rub" class="btn btn-primary">Buy Jerk Dry Rub</a>
+                <a href="#" class="btn btn-primary">Buy Jerk Dry Rub</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>All Purpose Seasoning</h3>
                 <p>Our All Purpose Seasoning is a must-have in any kitchen. Enhance the flavor of any dish with this versatile blend.</p>
-                <a href="ecommerce-link-all-purpose-seasoning" class="btn btn-primary">Buy All Purpose Seasoning</a>
+                <a href="#" class="btn btn-primary">Buy All Purpose Seasoning</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>Caribbean Curry Powder</h3>
                 <p>Our Caribbean Curry Powder is a rich blend of spices that brings the vibrant flavors of the Caribbean to your kitchen. Perfect for curries and stews.</p>
-                <a href="ecommerce-link-caribbean-curry-powder" class="btn btn-primary">Buy Caribbean Curry Powder</a>
+                <a href="#" class="btn btn-primary">Buy Caribbean Curry Powder</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>Frozen Jamaican Patties</h3>
                 <p>Experience the convenience of our frozen Jamaican patties, perfect for a quick and satisfying meal. Each patty features our signature flaky, golden pastry filled with your choice of seasoned minced beef or vegetable filling. Made with authentic Caribbean spices and ready to bake straight from your freezer.</p>
-                <a href="ecommerce-link-jamaican-patties" class="btn btn-primary">Buy Jamaican Patties</a>
+                <a href="#" class="btn btn-primary">Buy Jamaican Patties</a>
             </div>
             <div class="col-md-6 mb-4">
                 <h3>Pineapple & Habanero Hot Sauce</h3>
                 <p>Experience the perfect balance of sweet tropical pineapple and the intense heat of habanero peppers. This versatile hot sauce adds a delicious Caribbean twist to any dish, from grilled meats to seafood. Made with fresh, natural ingredients and no artificial preservatives.</p>
-                <a href="ecommerce-link-hot-sauce" class="btn btn-primary">Buy Hot Sauce</a>
+                <a href="#" class="btn btn-primary">Buy Hot Sauce</a>
             </div>
         </div>
     </div>
@@ -205,20 +197,20 @@
 
   <section id="footer" class="footer">
     <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2024 The Jerk Company</p>
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="75" height="50">
-        </a>
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="Index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-          <li class="nav-item"><a href="products.html" class="nav-link px-2 text-body-secondary">Products</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">History of Jerk</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Blog</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Events</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About Us</a></li>
-        </ul>
-      </footer>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <p class="col-md-4 mb-0 text-body-secondary">© 2024 The Jerk Company</p>
+            <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="75" height="50">
+            </a>
+            <ul class="nav col-md-4">
+                <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="products.html" class="nav-link">Products</a></li>
+                <li class="nav-item"><a href="history-of-jerk.html" class="nav-link">History of Jerk</a></li>
+                <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Events</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+            </ul>
+        </footer>
     </div>
   </section>
 
