--- a/history-of-jerk.html
+++ b/history-of-jerk.html
@@ -68,13 +68,13 @@
           <li class="nav-item"><a href="history-of-jerk.html" class="nav-link active" aria-current="page">History of Jerk</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link text-primary-emphasis">Blog</a></li>
           <li class="nav-item"><a href="#" class="nav-link text-primary-emphasis">Events</a></li>
-          <li class="nav-item"><a href="#" class="nav-link text-primary-emphasis">About Us</a></li>
+          <li class="nav-item"><a href="about-us.html" class="nav-link text-primary-emphasis">About Us</a></li>
         </ul>
       </header>
     </div>
   </section>
 
-  <section class="content-section">
+  <section class="history-section">
     <div class="container">
       <h2 class="fw-bold text-center mb-5">History of Jerk: A Culinary Journey Through Jamaica's Past</h2>
       
