--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,22 @@
     <title>About Us - The Jerk Co</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <style>
+        .header {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        /* Remove these margin/padding properties */
+        .header header {
+            margin-bottom: 0 !important;
+            padding-bottom: 0;
+        }
+        /* Remove border that creates gap */
+        .header .border-bottom {
+            border-bottom: none !important;
+        }
+    </style>
 </head>
 <body>
     <section id="header" class="header">
@@ -13,7 +29,7 @@
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="120" height="75" class="me-3">
-                    <span class="fs-4 ms-2">The Jerk Co</span>
+                 
                 </a>
                 <ul class="nav nav-pills align-items-center">
                     <li class="nav-item"><a href="Index.html" class="nav-link text-primary-emphasis">Home</a></li>
@@ -92,7 +108,7 @@
         </div>
     </section>
 
-    <section id="footer" class="footer">
+    <section id="footer" class="footer bg-body-secondary">
         <div class="container">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <p class="col-md-4 mb-0 text-body-secondary">© 2024 The Jerk Company</p>
