--- a/history-of-jerk.html
+++ b/history-of-jerk.html
@@ -16,9 +16,14 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            background-color: #af9559;
-            ;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .header header {
+            margin-bottom: 0 !important;
+            padding-bottom: 0;
+        }
+        .header .border-bottom {
+            border-bottom: none !important;
         }
         .header img {
             max-height: 100px;
@@ -46,7 +51,7 @@
             color: #333;
         }
         .footer {
-            background-color: #af9559;
+            background-color: #d2ba72;
             color: #fff;
         }
         .footer a {
@@ -60,7 +65,7 @@
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="120" height="75" class="me-3">
-          <span class="fs-4 ms-2">The Jerk Co</span>
+          
         </a>
         <ul class="nav nav-pills align-items-center">
           <li class="nav-item"><a href="Index.html" class="nav-link text-primary-emphasis">Home</a></li>
@@ -135,24 +140,24 @@
     </div>
   </section>
 
-  <section id="footer" class="footer">
-    <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2024 The Jerk Company</p>
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="75" height="50">
-        </a>
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="Index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-          <li class="nav-item"><a href="products.html" class="nav-link px-2 text-body-secondary">Products</a></li>
-          <li class="nav-item"><a href="history-of-jerk.html" class="nav-link px-2 text-body-secondary">History of Jerk</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Blog</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Events</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About Us</a></li>
-        </ul>
-      </footer>
+  <section id="footer" class="footer bg-body-secondary">
+    <div class="container ">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <p class="col-md-4 mb-0 text-body-secondary">© 2024 The Jerk Company</p>
+            <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img src="./Assets/Images/THE JERK CO - no bg logo.png" alt="The Jerk Company logo" width="75" height="50">
+            </a>
+            <ul class="nav col-md-4 justify-content-end">
+                <li class="nav-item"><a href="Index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="products.html" class="nav-link px-2 text-body-secondary">Products</a></li>
+                <li class="nav-item"><a href="history-of-jerk.html" class="nav-link px-2 text-body-secondary">History of Jerk</a></li>
+                <li class="nav-item"><a href="blog.html" class="nav-link px-2 text-body-secondary">Blog</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Events</a></li>
+                <li class="nav-item"><a href="about-us.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
+            </ul>
+        </footer>
     </div>
-  </section>
+</section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
